[gd_scene load_steps=35 format=2]

[ext_resource path="res://Sprites/ShopRelated/Shop.png" type="Texture" id=1]
[ext_resource path="res://Sprites/ShopRelated/BuySign.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Shop.gd" type="Script" id=3]
[ext_resource path="res://Sprites/HUD/E.png" type="Texture" id=4]
[ext_resource path="res://Font/GameFont.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/ShopRelated/HeartItem.png" type="Texture" id=6]
[ext_resource path="res://Sprites/ShopRelated/JumpItem.png" type="Texture" id=7]
[ext_resource path="res://DialogueBox.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 28 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 40, 28 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 40, 28 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 40, 28 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 40, 28 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 40, 28 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 40, 28 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 40, 28 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 40, 28 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 40, 28 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "talk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 20, 5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 8.5, 5.5 )

[sub_resource type="DynamicFont" id=20]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=17]
resource_name = "PopDown"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -16, -3 ), Vector2( -16, 21 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "PopUp"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -16, 21 ), Vector2( -16, -3 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16, 21 ) ]
}

[sub_resource type="DynamicFont" id=22]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 8.5, 5.5 )

[sub_resource type="DynamicFont" id=21]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=18]
resource_name = "PopDown"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 18, -3 ), Vector2( 18, 21 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "PopUp"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 18, 21 ), Vector2( 18, -3 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 18, 21 ) ]
}

[sub_resource type="DynamicFont" id=23]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 122, 59.5 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 19, 12 )

[node name="Shop" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "idle"
frame = 4
playing = true

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, 9 )
shape = SubResource( 9 )
one_way_collision = true

[node name="Item1" type="Area2D" parent="."]
z_index = -5

[node name="Sprite" type="Sprite" parent="Item1"]
position = Vector2( -16, 21 )
z_index = -5
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 15, 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item1"]
position = Vector2( -16.5, -3.5 )
shape = SubResource( 10 )

[node name="Price" type="Label" parent="Item1"]
margin_left = -18.0
margin_top = -13.0
margin_right = 49.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "10"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Item1"]
anims/PopDown = SubResource( 17 )
anims/PopUp = SubResource( 13 )
anims/RESET = SubResource( 14 )

[node name="ItemIcon" type="Sprite" parent="Item1"]
visible = false
position = Vector2( -29, -10 )
texture = ExtResource( 6 )

[node name="s" type="Label" parent="Item1"]
visible = false
margin_left = -23.0
margin_top = -13.0
margin_right = 17.0
margin_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 22 )
text = "$"

[node name="Item2" type="Area2D" parent="."]
z_index = -5

[node name="Sprite" type="Sprite" parent="Item2"]
position = Vector2( 18, 21 )
z_index = -5
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 15, 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item2"]
position = Vector2( 17.5, -3.5 )
shape = SubResource( 11 )

[node name="Price" type="Label" parent="Item2"]
margin_left = 16.0
margin_top = -13.0
margin_right = 35.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 21 )
text = "15"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Item2"]
anims/PopDown = SubResource( 18 )
anims/PopUp = SubResource( 15 )
anims/RESET = SubResource( 16 )

[node name="ItemIcon" type="Sprite" parent="Item2"]
visible = false
position = Vector2( 29, -10 )
texture = ExtResource( 7 )

[node name="s" type="Label" parent="Item2"]
visible = false
margin_left = 11.0
margin_top = -13.0
margin_right = 51.0
margin_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
text = "$"

[node name="ShopAppear" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopAppear"]
position = Vector2( 0, -45.5 )
shape = SubResource( 12 )

[node name="E" type="Sprite" parent="."]
visible = false
position = Vector2( 4, -18 )
texture = ExtResource( 4 )

[node name="ShopTalk" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopTalk"]
position = Vector2( 0, 2 )
shape = SubResource( 19 )

[node name="Dialogue" parent="." instance=ExtResource( 8 )]
margin_left = -40.0
margin_top = -62.0
margin_right = -40.0
margin_bottom = -62.0

[connection signal="input_event" from="Item1" to="." method="_on_Item1_input_event"]
[connection signal="mouse_entered" from="Item1" to="." method="_on_Item1_mouse_entered"]
[connection signal="mouse_exited" from="Item1" to="." method="_on_Item1_mouse_exited"]
[connection signal="animation_finished" from="Item1/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="input_event" from="Item2" to="." method="_on_Item2_input_event"]
[connection signal="mouse_entered" from="Item2" to="." method="_on_Item2_mouse_entered"]
[connection signal="mouse_exited" from="Item2" to="." method="_on_Item2_mouse_exited"]
[connection signal="animation_finished" from="Item2/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="ShopAppear" to="." method="_on_ShopAppear_area_entered"]
[connection signal="area_exited" from="ShopAppear" to="." method="_on_ShopAppear_area_exited"]
[connection signal="area_entered" from="ShopTalk" to="." method="_on_ShopTalk_area_entered"]
[connection signal="area_exited" from="ShopTalk" to="." method="_on_ShopTalk_area_exited"]
